--- a/text.html
+++ b/text.html
@@ -6,23 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    .wrapper {
-      overflow: hidden;
-      width: 414px;
-      height: 0;
-      padding-bottom: 100px;
-      /* background-color: #000; */
-    }
-    .img {
-      width: 414px;
+    div {
+      width: 100px;
       height: 100px;
-      color: red;
+      background-color: #f00;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <div class="img"></div>
-  </div>
+  <div></div>
+  <div></div>
 </body>
 </html>
