--- a/text.html
+++ b/text.html
@@ -6,15 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    div {
-      width: 100px;
-      height: 100px;
-      background-color: #f00;
+    .outer {
+      width: 100%;
+      height: 300px;
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid #000;
+    }
+    .inner-left {
+      width: 10%;
+      height: 100%;
+      background-color: blue;
+    }
+    .inner-middle {
+      flex: 1;
+      height: 100%;
+      background-color: orange;
+    }
+    .inner-right {
+      width: 30%;
+      height: 100%;
+      background-color: gray;
     }
   </style>
 </head>
 <body>
-  <div></div>
-  <div></div>
+  <div class="outer">
+    <div class="inner-left"></div>
+    <div class="inner-middle"></div>
+    <div class="inner-right"></div>
+  </div>
 </body>
 </html>
