add detail's banner and gallary

--- a/text.html
+++ b/text.html
@@ -7,34 +7,21 @@
   <title>Document</title>
   <style>
     .outer {
-      width: 100%;
-      height: 300px;
-      display: flex;
-      justify-content: space-between;
-      border: 1px solid #000;
+      background-color: #000;
+      width: 500px;
+      height: 0;
+      padding-bottom: 50%;
     }
-    .inner-left {
-      width: 10%;
-      height: 100%;
-      background-color: blue;
-    }
-    .inner-middle {
-      flex: 1;
-      height: 100%;
-      background-color: orange;
-    }
-    .inner-right {
-      width: 30%;
-      height: 100%;
-      background-color: gray;
+    .inner {
+      width: 100px;
+      height: 100px;
+      background-color: #b8a6d9;
     }
   </style>
 </head>
 <body>
   <div class="outer">
-    <div class="inner-left"></div>
-    <div class="inner-middle"></div>
-    <div class="inner-right"></div>
+    <div class="inner">55555</div>
   </div>
 </body>
 </html>
